--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
-    <title>Document</title>
+
+    <title>Guess That Movie</title>
 </head>
+
 <body>
-    
+    <main>
+        <div id=""><img></div>
+        <div id=""><img></div>
+        <div id=""><img></div>
+    </main>
+
 </body>
+
 </html>
