adds object that stores set of images

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 
 <body>
     <main>
-        <div id=""><img></div>
-        <div id=""><img></div>
-        <div id=""><img></div>
+        <h1>Guess That Movie!</h1>
+        <div id=""><img>Image 1</div>
+        <div id=""><img>Image 2</div>
+        <div id=""><img>Image 3</div>
+        <button>Text box</button>
+        <button>Hint</button>
     </main>
+
 
 </body>
 
