adds guesses variable, sets  elements to variables

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 <body>
     <main>
         <h1>Guess That Movie!</h1>
-        <div id=""><img>Image 1</div>
-        <div id=""><img>Image 2</div>
-        <div id=""><img>Image 3</div>
+        <div id="img1"><img>Image 1</div>
+        <div id="img2"><img>Image 2</div>
+        <div id="img3"><img>Image 3</div>
+        <h2 id="guesses"></h2>
         <button>Text box</button>
         <button>Hint</button>
+
     </main>
 
 
