adds input to html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="img2"><img>Image 2</div>
         <div id="img3"><img>Image 3</div>
         <h2 id="guesses"></h2>
-        <button>Text box</button>
+        <input id="input"></input>
         <button>Hint</button>
 
     </main>
