--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 </head>
 
 <body>
-    <main>
+    <header>
         <h1>Guess That Movie!</h1>
+    </header>
+    <main>
         <div id="img1"><img>Image 1</div>
         <div id="img2"><img>Image 2</div>
         <div id="img3"><img>Image 3</div>
+    </main>
+    <footer>
         <h2 id="guesses"></h2>
         <input id="input"></input>
         <button>Hint</button>
 
-    </main>
+    </footer>
 
 
 </body>
