--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <title>Guess That Movie</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <script defer src="js/main.js"></script>
 </head>
 
 <body>
@@ -22,7 +23,6 @@
         <h2 id="guesses"></h2>
         <input id="input"></input>
         <button>Hint</button>
-
     </footer>
 
 
