displays images with render function

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
         <h1>Guess That Movie!</h1>
     </header>
     <main>
-        <div id="img1"><img>Image 1</div>
-        <div id="img2"><img>Image 2</div>
-        <div id="img3"><img>Image 3</div>
+        <div><img id="img1"></div>
+        <div><img id="img2"></div>
+        <div><img id="img3"></div>
     </main>
     <footer>
         <h2 id="guesses"></h2>
         <input id="input"></input>
-        <button>Hint</button>
+        <button id="hintbtn">Hint</button>
+        <button id="submitbtn">Submit</button>
     </footer>
 
 
