--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
 </head>
 
 <body>
-    <header>
-        <h1>Guess That Movie!</h1>
-    </header>
-    <main>
-        <div><img id="img1"></div>
-        <div><img id="img2"></div>
-        <div><img id="img3"></div>
-    </main>
-    <footer>
-        <h2 id="guesses"></h2>
-        <input id="input"></input>
-        <button id="submitbtn">Submit</button>
-        <button id="hintbtn">Hint</button>
+    <center>
+        <header>
+            <h1>Guess That Movie!</h1>
+        </header>
+        <main>
+            <div><img id="img1"></div>
+            <div><img id="img2"></div>
+            <div><img id="img3"></div>
+        </main>
+        <footer>
+            <h2 id="guesses"></h2>
+            <input id="input"></input>
+            <button id="submit">Submit</button>
+            <button id="hint">Hint</button>
 
-    </footer>
-
+        </footer>
+    </center>
 
 </body>
 
