--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Guess That Movie</title>
     <link rel="stylesheet" href="css/main.css" />
     <script defer src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 </head>
 
 <body>
