--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Guess That Movie</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Amarante&display=swap" rel="stylesheet">
     <script defer src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+
 </head>
 
 <body>
 
     <header>
-        <h1>Guess That Movie!</h1>
+        <div id="header">
+            <h1>Guess That Movie!</h1>
+        </div>
     </header>
     <main>
         <div><img id="img1"></div>
