adds background noise effect

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Guess That Movie</title>
     <link rel="stylesheet" href="css/main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Amarante&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
     <script defer src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 
@@ -16,9 +16,9 @@
 <body>
 
     <header>
-        <div id="header">
-            <h1>Guess That Movie!</h1>
-        </div>
+
+        Guess That Movie!
+
     </header>
     <main>
         <div><img id="img1"></div>
@@ -26,11 +26,11 @@
         <div><img id="img3"></div>
     </main>
     <footer>
-        <h2 id="guesses"></h2>
+
         <input id="input"></input>
         <button id="submit">Submit</button>
         <button id="hint">Hint</button>
-
+        <h2 id="guesses"></h2>
     </footer>
 
 
