--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Guess That Movie</title>
     <link rel="stylesheet" href="css/main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Yesteryear&display=swap" rel="stylesheet">
     <script defer src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 
@@ -15,12 +15,13 @@
 
 <body>
 
+
     <header>
-
         Guess That Movie!
-
+        <p>Guess what movie these three photos emulate?</p>
     </header>
     <main>
+
         <div><img id="img1"></div>
         <div><img id="img2"></div>
         <div><img id="img3"></div>
