updates styles and adds winning logic

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <header>
         <h1>Guess That Movie!</h1>
-        <h3>What movie do these three photos emulate?</h3>
+        <h3>What movie do these three photos evoke?</h3>
     </header>
     <main>
 
@@ -47,6 +47,10 @@
         <button id="submit">Submit</button>
         <button id="hint">Hint</button>
         <h2 id="guesses"></h2>
+        <div class="progbar">
+
+            <div id="fill">Progress</div>
+        </div>
     </footer>
 
 
